--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,9 +4,9 @@
     tools:showIn="navigation_view">
 
     <group android:id="@+id/menu_group" android:checkableBehavior="single">
-        <item
+        <!--<item
             android:id="@+id/nav_home"
-            android:title="Home" />
+            android:title="Home" />-->
     </group>
 
 </menu>
